--- a/css/style.css
+++ b/css/style.css
@@ -705,6 +705,267 @@ li{
     color: white;
   }
 
+/* CONTATO ---------------------------------*/
+.cnt-content{
+
+     width: 100%;
+    margin: auto; 
+    background-color: var(--color-fundo);
+    font-family: var(--font-family-mandali);
+
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding-bottom: 50px;
+
+}
+.cnt-titulo{
+    margin: 20px 0 0 30%;
+    font-size: 17px;
+    
+}
+.cnt-main-container{
+    position: relative;
+    width: max(40%);
+    background-color: var(--color-fundo-bloco);
+    height: max(770px);
+    margin: auto;
+    padding-top: 1px;
+    font-size: 15px;
+    border-radius: 5px;
+    box-shadow: 0 10px 6px -6px grey;
+    margin-bottom: 100px;
+}
+
+@media(max-width:70em){
+    .cnt-main-container{
+        width: max(80%);
+        height: max(800px);
+    }
+    .grid{
+        margin: 4% 0 0 4% !important;
+    }
+}
+.grid{
+
+    display: grid;
+    grid-template-rows: repeat(8, 60px);
+    grid-template-columns: repeat(2, 50%);
+    gap: 3% 0%; 
+    margin: 5%;
+    margin-left: 20%;
+}
+.flex-column{
+    display: flex;
+    flex-direction: column;
+}
+.item1{
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+
+}
+.item2{
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+
+}
+.item3{
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+
+}
+.item4{
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+
+}
+.item5{
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+
+}
+.item6{
+    grid-row: 4 / 5;
+    grid-column: 1 / 3;
+
+}
+.item7{
+    grid-row: 5 / 6;
+    grid-column: 1 / 3;
+
+}
+.item8{
+    grid-row: 6 / 7;
+    grid-column: 1 / 2;
+
+}
+.item9{
+    grid-row: 6 / 7;
+    grid-column: 2 / 3;
+
+}
+.item10{
+    grid-row: 7 / 10;
+    grid-column: 1 / 3;
+
+}
+.item11{
+    grid-row: 10 / 11;
+    grid-column: 1 / 3; 
+}
+
+.input-group label{
+    margin-bottom: 4px;
+}
+.input-group input{
+    height: 30px;
+    border: 0;
+    outline: none;
+}
+.input-field{
+    width: 95%;
+    border-radius: 1px;
+    background-color: var(--color-fundo);
+}
+.input-field-half{
+    width: 90%;
+    flex-direction: row;
+    background-color: var(--color-fundo);
+}
+#mensagem{
+    width: 95%;
+    height: 130px;
+    border: 0;
+    outline: none;
+    resize: none;
+    background-color: var(--color-fundo);
+}
+
+.input-submit{
+    background-color: var(--color-paleta-vinho);
+    width: 18%;
+    height: 35px;
+    margin-left: 77%;
+    border: 0;
+    color: var(--color-fundo);
+    font-size: 16px;
+    margin-top: 15px;
+}
+.input-submit:hover{
+    box-shadow: 0 10px 6px -6px grey;
+}
+
+.cnt-sec-container{
+    position: absolute;
+    top: 335px;
+    left: 21vw;
+
+    width: max(280px);
+    height: max(600px);
+    background-color: #834045;
+    border-radius: 5px;
+    color: var(--color-fundo);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+
+    padding: 2%;
+    padding-top: 50px;
+
+}
+@media(max-width:110em){
+.cnt-sec-container{
+    left: 11vw;   
+}
+}
+
+@media(max-width:90em){
+    .cnt-sec-container{
+        left: 7vw;   
+    }
+}
+@media(max-width:70em){
+    .cnt-sec-container{
+        position: static;
+        height: 350px;
+        margin-bottom: 20px;
+        box-shadow: 0 10px 6px -6px grey;
+    }
+    .cnt-content{
+        align-items: center;
+    }
+    .cnt-titulo{
+        margin: 0;
+    }
+
+}
+
+.cnt-sec-container h2{
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.cnt-item{
+    height: 80px;
+    display: flex;
+    gap: 20px;
+}
+.icon-img{
+    width: 30px;
+    height: 30px;
+}
+
+/* PRODUTOS/PROJETOS--------------------------- */
+
+.prd-title{
+    background-color: var(--color-paleta-vinho);
+    color: var(--color-fundo-bloco);
+    font-size: 18px;
+    text-align: center;
+    line-height: 75px;
+    width: 900px;
+    height: 75px;
+    border-radius: 60px;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.prd-containers{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-top: 110px;
+    padding-bottom: 100px;
+}
+
+.prd-container{
+    margin-bottom: 60px;
+}
+
+.frame{
+    display: flex;
+    width: 285px;
+    height: 290px;
+    background-color: var(--color-fundo-bloco);
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+.prd-img{
+    width: auto;
+    height: 230px;
+}
+.prd-description{
+    width: 80%;
+    font-family: var(--font-family-mandali);
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 7px;
+    line-height: 24px;
+}
+
   
   
 /* Media query - alterar layout dependendo do tamanho da tela */
