--- a/css/style.css
+++ b/css/style.css
@@ -21,23 +21,20 @@
 
 body{
     overflow-x: hidden;
-    
     background-color: var(--color-fundo); 
-
 }
 body::-webkit-scrollbar {
     width: 10px;               
-  }
-  
-  body::-webkit-scrollbar-track {
+}
+body::-webkit-scrollbar-track {
     background: transparent;        
-  }
+}
   
-  body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background-color: var(--color-paleta-vinho);    
     border-radius: 4px;       
     border: 1px transparent;  
-  }
+}
 
 .container {
     display:grid; 
@@ -69,7 +66,7 @@ body::-webkit-scrollbar {
 .logo { 
     grid-area: logo; 
     padding-left: 5vw;
-
+    width: 15vw;
 }
 .logo img{
     width: 100%;
@@ -874,16 +871,58 @@ li{
     padding-top: 50px;
 
 }
-@media(max-width:110em){
+@media(max-width:1250em){
 .cnt-sec-container{
-    left: 11vw;   
+    left: 13vw;   
 }
 }
 
 @media(max-width:90em){
     .cnt-sec-container{
-        left: 7vw;   
+        left: 7vw;  
+         
     }
+    .search{
+        display: none;
+    }
+    .opt{
+        width: 50vw;
+        margin-left: 30;
+    }
+    .logo{
+        width: 20vw;
+        
+    }
+    
+    .containerSobreinterno {  
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows:40% 20% 20% 20%;
+        grid-auto-columns: 1fr;
+        grid-auto-rows: 1fr;
+        gap: 0vh 0vw;
+        grid-auto-flow: row;
+        grid-template-areas:
+          "imagemMulher "
+          "sobrenos"
+          "txtsobrenos"
+          "buttonserviços";
+        width:  50vw;
+        align-items: center;
+        padding-top: 25vh;
+        text-align: center;
+        padding-left: 20vw;
+      }
+      .sobrenos p{
+        padding-bottom: 6vh;
+        font-size: 6vh;
+      }
+      .txtsobrenos p{
+        padding-top: 50vh;
+        padding-bottom: 6vh;
+        font-size: 3vh;
+        text-justify:justify;
+      }
 }
 @media(max-width:70em){
     .cnt-sec-container{
