--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,7 @@ li{
     margin-bottom: 50vh;
     justify-content: center;
     text-align: center;
-    display: inline;
+   padding-top: 8vh;
 
     
 }
@@ -871,10 +871,19 @@ li{
     padding-top: 50px;
 
 }
+@media (max-width:1500px){
+    .containermaps{
+       position: relative;
+    }
+    .div2 {
+        display: none;
+    }
+}
 @media(max-width:1250em){
 .cnt-sec-container{
     left: 13vw;   
 }
+
 }
 
 @media(max-width:90em){
@@ -895,34 +904,11 @@ li{
     }
     
     .containerSobreinterno {  
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows:40% 20% 20% 20%;
-        grid-auto-columns: 1fr;
-        grid-auto-rows: 1fr;
-        gap: 0vh 0vw;
-        grid-auto-flow: row;
-        grid-template-areas:
-          "imagemMulher "
-          "sobrenos"
-          "txtsobrenos"
-          "buttonserviços";
-        width:  50vw;
-        align-items: center;
-        padding-top: 25vh;
-        text-align: center;
-        padding-left: 20vw;
+        display: none;
+        
       }
-      .sobrenos p{
-        padding-bottom: 6vh;
-        font-size: 6vh;
-      }
-      .txtsobrenos p{
-        padding-top: 50vh;
-        padding-bottom: 6vh;
-        font-size: 3vh;
-        text-justify:justify;
-      }
+      
+      
 }
 @media(max-width:70em){
     .cnt-sec-container{
