--- a/css/style.css
+++ b/css/style.css
@@ -941,7 +941,7 @@ li{
     height: 30px;
 }
 
-/* PRODUTOS/PROJETOS--------------------------- */
+/* PRODUTOS--------------------------- */
 
 .prd-title{
     background-color: var(--color-paleta-vinho);
@@ -991,7 +991,68 @@ li{
     line-height: 24px;
 }
 
-  
+/* PROJETOS----------------------------------------- */
+
+.prj-main-container{
+    width: 1000px;
+    margin: auto;
+    font-family: var(--font-family-mandali);
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding-bottom: 100px;
+}
+
+.prj-title{
+    font-size: 20px;
+    font-family: var(--font-family-mandali);
+    align-self: center;
+}
+
+.prj-container{
+    height: 150px;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: 1px solid #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: auto;
+}
+
+.prj-img{
+    width: 200px;
+}
+.content{
+    width: 70%;
+    padding: 20px;
+    line-height: center;
+}
+.left{
+    float: left;
+}
+.right{
+    float: right;
+}
+.prj-item1{
+    background-color: var(--color-paleta-vinho);
+    color: var(--color-fundo-bloco);
+}
+.prj-item3{
+    background-color: var(--color-fundo-bloco);
+}
+
+@media(max-width:50em){
+    .prj-main-container{
+       width: 100%; 
+    }
+    .prj-container{
+        height: auto;
+        padding: 20px;
+    }
+    
+}
+
   
 /* Media query - alterar layout dependendo do tamanho da tela */
 
